fix: z-index glitch no evento hover

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -480,6 +480,14 @@ td.glow2:after{
 	-webkit-transition: all var(--PlayerTransTime);
 	transition: all var(--PlayerTransTime);
 }
+
+.header-time-a{
+	margin-left: -30px;  /* MARGEM DE TRANSPOSICAO DAS IMAGENS */
+	position: relative;
+}
+.marginleft-0px{
+	margin-left: 0px;
+}
 .player-name{
 	padding: 0 0 30px 0 !important;
 	margin-top: 30px !important;
@@ -488,21 +496,24 @@ td.glow2:after{
 	text-align: center;
 	transition: all var(--PlayerTransTime);
 	text-indent: 0px !important;
+	--Font-size-playername: 1.75em;
+	font-size: var(--Font-size-playername);
 	-webkit-text-stroke: 0px transparent;
-}
-.header-time-a{
-	margin-left: -30px;  /* MARGEM DE TRANSPOSICAO DAS IMAGENS */
-	position: relative;
-}
-.marginleft-0px{
-	margin-left: 0px;
 }
 .header-time-a:hover .player-name {
 	transition: all var(--PlayerTransTime);
-	font-size: 1.2em;
+	font-size: calc(var(--Font-size-playername) + 0.15em);
 	color: rgb(20, 73, 73);
-	text-shadow: 1px 1px 1px rgba(255,255,255,0.5), 0px 0px 10px rgba(0,0,0,0.6);
-	-webkit-font-smoothing: antialiased;
+	text-shadow: 1px 1px 1px turquoise, 0px 0px 10px rgba(0,0,0,0.6);
+	-webkit-font-smoothing: subpixel-antialiased;
+	font-smooth: subpixel-antialiased;
+}
+.header-time-a:hover img {
+	transition: all var(--PlayerTransTime) !important;
+	top: 0px;
+}
+.header-time-a:hover {
+	z-index: 4 !important;
 }
 .header-time-a img{
 	transition: all var(--PlayerTransTime);
@@ -514,33 +525,25 @@ td.glow2:after{
 	top: 10px;
 	left: 0;
 }
-/* .header-time:hover img{
-	transition: all var(--PlayerTransTime);
-	filter: grayscale() brightness(0.8) opacity(0.92)
-} */
-.header-time-a:hover img {
-	transition: all var(--PlayerTransTime) !important;
-	top: 0px;
-	z-index: 4;
-}
-.header-time-kncerato{
+
+#kncerato-a{
 	z-index: 1;
 }
 
-.header-time-freq{
+#freq-a{
 	z-index: 2;
 }
 
-.header-time-chay{
+#chay-a{
 	z-index: 3;
 }
-.header-time-turnay{
+#turnay-a{
 	z-index: 2;
 }
-.header-time-gyzer{
+#gyzer-a{
 	z-index: 1;
 }
-.header-time-blv{
+#blv-a{
 	z-index: 0;
 }
 
